<resources>
  <string name="app_name">Jisho Tomo</string>
  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>
  <string name="nav_header_title">Android Studio</string>
  <string name="nav_header_subtitle">android.studio@android.com</string>
  <string name="nav_header_desc">Navigation header</string>
  <string name="action_search">Search</string>
  <string name="alt_readings">Alternate Readings</string>
  <string name="alt_kanji">Alternate Kanji</string>
  <string name="see_also_format">%1$s %2$s</string>
  <string name="applies_to_format">%1$s %2$s</string>
  <string name="see_also">See also:</string>
  <string name="applies_to">Applies to:</string>
  <string name="list_of_words_delimiter">,\u0020</string>
  <string name="search_hint">Search the dictionary</string>
  <string name="add_to_favorites">Add Entry to Favorites</string>
  <string name="remove_from_favorites">Remove Entry from Favorites</string>
  <string name="select_something">No entry selected.</string>
  <string name="no_favorites">You have no favorite entries. Tap the star on an entry to favorite it.</string>
  <string name="no_search_results">No results found for \"%s\". Try a different search.</string>
  <string name="nothing_here">Whoops, there is nothing here.</string>
  <string name="copied">Meaning copied to your clipboard.</string>
  <string name="copy_label">Meaning</string>

  <!-- Menu -->
  <string name="search">Search</string>
  <string name="search_results">Search Results</string>
  <string name="browse">Browse</string>
  <string name="favorites">Favorites</string>
  <string name="jlpt">JLPT Vocabulary Lists</string>
  <string name="jlpt_n1">N1</string>
  <string name="jlpt_n2">N2</string>
  <string name="jlpt_n3">N3</string>
  <string name="jlpt_n4">N4</string>
  <string name="jlpt_n5">N5</string>
  <string name="export">Export to TSV</string>
  <string name="remove_all_favorites">Remove All Favorites</string>
  <string name="about">About</string>

  <!-- Widget -->
  <string name="word_of_the_day">Word of the Day</string>
  <string name="configure">Select a JLPT Level</string>
  <string name="widget_explanation">The widget will display a random word from your selected JLPT level every 24 hours.</string>
  <string name="add_widget">Add widget</string>
...
  <string name="no_external_storage">No external storage detected. You will not be able to use the Export feature.</string>
  <string name="csv_successful">TSV export successful!</string>
  <string name="csv_failed">TSV export failed.</string>
  <string name="share_csv">Share Exported TSV</string>

  <string name="explain_unfavorite_all">This will remove all of your favorites. This cannot be undone. Continue?</string>
  <string name="okay">OK</string>

  <string name="about_app">Jisho Tomo was created as part of the Android Developer Nanodegree program by Udacity and Google. The
    code is open source and available on <a href="https://github.com/sienatime/jishotomo">GitHub</a>.\n\nThis
    app uses the <a href="http://www.edrdg.org/jmdict/j_jmdict.html">JMdict dictionary files</a>.
    These files are the property of the <a href="http://www.edrdg.org/">Electronic Dictionary Research and Development Group</a>,
    and are used in conformance with the Group\'s <a href="http://www.edrdg.org/edrdg/licence.html">licence</a>.\n\nJLPT
...
