...
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:paddingBottom="8dp"
        style="@style/small_caps"
        visibleOrGone="@{presenter.partsOfSpeechIsVisible()}"
        android:text="@{presenter.partsOfSpeech(context)}"
        tools:text="NOUN, NA-ADJ"
        />
    <View
        android:id="@+id/sense_divider"
        style="@style/divider_full_width" />

    <TextView
...
